fixed overflow issue

--- a/app.scss
+++ b/app.scss
@@ -1,10 +1,11 @@
 body {
     height: 100vh;
-    width: 100vw;
-    
+    width: 100vw;    
     background-image: url("Design/CV Site Faded Background 02.jpg");
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
+    overflow-y: hidden;
 }
 
 main {    
